--- a/wood.html
+++ b/wood.html
@@ -53,9 +53,7 @@
 			<img class="portpics" src="assets/img/wood2.jpg" width="300px">
 			<img class="portpics" src="assets/img/wood.jpg" width="400px">
 			<p class="description_txt_1"> We 3D printed wheels and treads using flex, and made the rest of the body using clear acrylic. It took multiple adjustments to find the perfect fit for the wheels and tread, by making sure there was not too much or too little slack. We made the top hole adjustable so we could slide the wheels on and off, and created washers to support the wheels onto the body. Using the same motors and BLE feather, we assembled the rest of the body similar to the wooden prototype, and we made cases for each of the components with easy access to switch them in and out. In future iterations, I would have sanded the gears more to create smoother motion. </p>
-			<video class="portpics" width="480" height="270" preload controls muted="true">
-				<source src="assets/img/proj3b.mp4#t=3">
-			</video>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/f7BXJlwxI68?" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 		</div>
 		
