--- a/misc.html
+++ b/misc.html
@@ -56,6 +56,17 @@
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/-RKSNR9NEcE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
 
+		<p class="description_txt"> <span class= "boldwrd"> Graphic design </span>
+		<div class="pics">
+			<img class="portpics" src="assets/img/me-02.png" width="300px">
+			<div class="pics">
+				<img class="portpics" src="assets/img/bamfest1.png" width="250px">
+				<img class="portpics" src="assets/img/bamfest3.jpg" width="250px">
+				<img class="portpics" src="assets/img/sticker.png" width="250px">
+				<img class="portpics" src="assets/img/sticker2.png" width="250px">
+			</div>
+		</div>
+		
 
 		<p class="description_txt"> <span class= "boldwrd"> Collage </span>
 		<div class="pics">
@@ -65,14 +76,6 @@
 			
 		</div>
 
-		<p class="description_txt"> <span class= "boldwrd"> Graphic design </span>
-		<div class="pics">
-			<img class="portpics" src="assets/img/bamfest1.png" width="250px">
-			<img class="portpics" src="assets/img/bamfest3.jpg" width="250px">
-			<img class="portpics" src="assets/img/sticker.png" width="250px">
-			<img class="portpics" src="assets/img/sticker2.png" width="250px">
-			
-		</div>
 		
 
 
