--- a/misc.html
+++ b/misc.html
@@ -30,7 +30,7 @@
 	<div class="container">
 		<p class="dTitle"> miscellaneous creative work </p>
 		<div class="description">
-			<p class="description_txt"> Below are some samples of my photography, videography, collage, and graphic design.
+			<p class="description_txt"> Below are some samples of my photography, graphic design, videography, and collage.
 			</p>
 			
 		</div>
@@ -47,24 +47,27 @@
 			<img class="portpics" src="assets/img/p12.jpg" height ="300px">
 			<img class="portpics" src="assets/img/p7.jpg" width="300px">
 	
+		</div>		
+
+
+
+		<p class="description_txt"> <span class= "boldwrd"> Graphic design </span>
+		<div class="pics">
+			<img class="portpics" src="assets/img/me-02.png" width="300px">
+			<img class="portpics" src="assets/img/reese.png" width="300px">
+			<img class="portpics" src="assets/img/bamfest1.png" width="250px">
+			<img class="portpics" src="assets/img/bamfest3.jpg" width="250px">
+			<img class="portpics" src="assets/img/sticker.png" width="250px">
+			<img class="portpics" src="assets/img/sticker2.png" width="250px">
+			
 		</div>
-		
+
 		<p class="description_txt"> <span class= "boldwrd"> Videography </span>
 		<div class="pics">
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/1FdodUdB860" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<p></p>
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/-RKSNR9NEcE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		</div>
-
-		<p class="description_txt"> <span class= "boldwrd"> Graphic design </span>
-		<div class="pics">
-			<img class="portpics" src="assets/img/me-02.png" width="300px">
-			<div class="pics">
-				<img class="portpics" src="assets/img/bamfest1.png" width="250px">
-				<img class="portpics" src="assets/img/bamfest3.jpg" width="250px">
-				<img class="portpics" src="assets/img/sticker.png" width="250px">
-				<img class="portpics" src="assets/img/sticker2.png" width="250px">
-			</div>
+			
 		</div>
 		
 
