--- a/contact.html
+++ b/contact.html
@@ -33,8 +33,8 @@
 
 	<div class="pics">
 		<img class="contactpic" src="assets/img/about.png" width="200px">
-		<p class="contacttxt"> I am an Economics and Data Science student at UC Berkely, and an asipiring UI/UX designer with experience in creative direction, physical prototyping, graphic design, photography, videography, and branding.
-		<br> I strive to create inclusive and representative design throughout my creative work.
+		<p class="contacttxt"> I am an Economics and Data Science student at UC Berkeley, and an asipiring product designer with experience in creative direction, physical prototyping, visual design, and branding.
+		<br> I believe in building inclusive, representative, and intentional design throughout my creative work.
 		<br> <br> Email: anissarashid@berkeley.edu </p>		
 	</div>
 	
