--- a/az.html
+++ b/az.html
@@ -23,7 +23,7 @@
 			<a href = "i25.html" class="sidebar_item"> i25 </a>
 			<a href = "i24.html" class="sidebar_item"> Earthworks </a>
 			<a href = "i23.html" class="sidebar_item"> Matriarchs </a>
-			<a href = "contact.html" class="contact"> Contact </a>
+			<a href = "contact.html" class="contact"> About </a>
 		</div>
 	</div>
 
@@ -60,9 +60,9 @@
 
 		<p class="description_txt"> <span class= "boldwrd"> Final website: </span>
 		<div class="pics">
-			<video class="portpics" width="697" preload controls muted="true">
+			<a href= "http://anissarashid.me/azlyrics/"> <video class="portpics" width="697" preload controls muted="true">
 				<source src="assets/img/azvid.mp4">
-			</video>
+			</video> </href>
 
 		</div>
 		
