--- a/contact.html
+++ b/contact.html
@@ -23,20 +23,30 @@
 			<a href = "i25.html" class="sidebar_item"> i25 </a>
 			<a href = "i24.html" class="sidebar_item"> Earthworks </a>
 			<a href = "i23.html" class="sidebar_item"> Matriarchs </a>
-			<a href = "contact.html" class="contact"> Contact </a>
+			<a href = "contact.html" class="contact"> About </a>
 		</div>
 	</div>
 
 	<div class="container">
 		
-	<p class="dTitle"> Contact me</p>
+	<p class="dTitle"> About me</p>
 
 	<div class="pics">
-		<img class="contactpic" src="assets/img/about.png" width="200px">
-		<p class="contacttxt"> I am an Economics and Data Science student at UC Berkeley, and an asipiring product designer with experience in creative direction, physical prototyping, visual design, and branding.
-		<br> I believe in building inclusive, representative, and intentional design throughout my creative work.
-		<br> <br> Email: anissarashid@berkeley.edu </p>		
+		<img class="contactpic" src="assets/img/about.png" >
+
+		<p class="contacttxt"> I am an Economics and Data Science student at UC Berkeley, and an asipiring ui/ux designer with experience in creative direction, physical prototyping, visual design, and branding.
+		<br><br> I believe in building inclusive, representative, and intentional design to help solve complex and intersectional problems. I'm passionate about visually sharing stories and representing the communities I am apart of throughout my creative work. I am currently looking for new opportunities to grow and develop as a designer. 
+		
+		<br><br><a href = "assets/img/resume2.pdf"> <span style="font-weight: bold; font-size: 20px;"> Resume </span></a>
+
+		<br><br> <span style="font-weight: bold; font-size: 20px"> Contact </span>
+		<br> Email: anissarashid@berkeley.edu 
+
+		</p>	
+
 	</div>
+
+</div>
 	
 <div class="center-con">
 	<div class="round" >
