--- a/misc.html
+++ b/misc.html
@@ -23,7 +23,7 @@
 			<a href = "i25.html" class="sidebar_item"> i25 </a>
 			<a href = "i24.html" class="sidebar_item"> Earthworks </a>
 			<a href = "i23.html" class="sidebar_item"> Matriarchs </a>
-			<a href = "contact.html" class="contact"> Contact </a>
+			<a href = "contact.html" class="contact"> About </a>
 		</div>
 	</div>
 
