--- a/az.html
+++ b/az.html
@@ -15,8 +15,8 @@
 			<p class="side"> Design </p>
 			<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
 			<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
-			<a href = "wood.html" class="sidebar_item"> Wood Work </a>	
 			<a href = "az.html" class="sidebar_item"> AZ Lyrics </a>
+			<a href = "wood.html" class="sidebar_item"> Wood Work </a>
 			<a href = "misc.html" class="sidebar_item"> Misc </a>
 			<p class="side"> Creative Direction </p>	
 			<a href = "i26.html" class="sidebar_item"> i26 </a>
@@ -30,7 +30,7 @@
 	<div class="container">
 		<p class="dTitle">AZ Lyrics - Redesign </p>
 		<div class="description">
-			<p class="description_txt"> <span class="boldwrd"> Timeline: </span> 2 weeks - Spring 2019 <br> <span class = "boldwrd"> Design challenge: </span> Redesign the AZ Lyrics website, with a landing page, search page, lyric page, and artist page. 
+			<p class="description_txt"> As a project for the Web Design Decal (Spring 2019), my team and I redesinged the AZ Lyrics website. We were inspried by brutalist design, and decided to completely redesign the wesite to make it more user friendly and modern. <br> <span class="boldwrd"> Timeline: </span> 2 weeks - Spring 2019 <br> <span class = "boldwrd"> Design challenge: </span> Redesign the AZ Lyrics website, with a landing page, search page, lyric page, and artist page. 
 			</p>
 			
 		</div>
