--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,8 @@
 			<p class="side"> Design </p>
 			<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
 			<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
-			<a href = "wood.html" class="sidebar_item"> Wood Work </a>	
 			<a href = "az.html" class="sidebar_item"> AZ Lyrics </a>
+			<a href = "wood.html" class="sidebar_item"> Wood Work </a>
 			<a href = "misc.html" class="sidebar_item"> Misc </a>
 			<p class="side"> Creative Direction </p>	
 			<a href = "i26.html" class="sidebar_item"> i26 </a>
@@ -34,7 +34,7 @@
 	<div class="pics">
 		<img class="contactpic" src="assets/img/about.png" >
 
-		<p class="contacttxt"> I am an Economics and Data Science student at UC Berkeley, and an asipiring ui/ux designer with experience in creative direction, physical prototyping, visual design, and branding.
+		<p class="contacttxt"> I am an Economics and Data Science student at UC Berkeley, and an asipiring UI/UX designer with experience in creative direction, physical prototyping, visual design, and branding.
 		<br><br> I believe in building inclusive, representative, and intentional design to help solve complex and intersectional problems. I'm passionate about visually sharing stories and representing the communities I am apart of throughout my creative work. I am currently looking for new opportunities to grow and develop as a designer. 
 		
 		<br><br><a href = "assets/img/resume2.pdf"> <span style="font-weight: bold; font-size: 20px;"> Resume </span></a>
