--- a/wood.html
+++ b/wood.html
@@ -15,8 +15,8 @@
 			<p class="side"> Design </p>
 			<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
 			<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
-			<a href = "wood.html" class="sidebar_item"> Wood Work </a>	
 			<a href = "az.html" class="sidebar_item"> AZ Lyrics </a>
+			<a href = "wood.html" class="sidebar_item"> Wood Work </a>
 			<a href = "misc.html" class="sidebar_item"> Misc </a>
 			<p class="side"> Creative Direction </p>	
 			<a href = "i26.html" class="sidebar_item"> i26 </a>
@@ -30,7 +30,7 @@
 	<div class="container">
 		<p class="dTitle">Wood Work</p>
 		<div class="description">
-			<p class="description_txt"> <span class="boldwrd"> Timeline: </span> 2 weeks - Summer 2019 Design Innovation 22 <br> <span class = "boldwrd"> Design challenge: </span> Create a gear mechanism that converts linear to rotary motion. </p>
+			<p class="description_txt"> As a project for the Prototyping and Fabrication class (Summer 2019), I designed and built a gear mechanism that introduced me to laser cutting and the design process. <br><span class="boldwrd"> Timeline: </span> 2 weeks - Summer 2019 <br> <span class = "boldwrd"> Design challenge: </span> Create a gear mechanism that converts rotary to linear motion. </p>
 			
 		</div>
 
@@ -52,7 +52,7 @@
 		<div class="pics">
 			<img class="portpics" src="assets/img/wood2.jpg" width="300px">
 			<img class="portpics" src="assets/img/wood.jpg" width="400px">
-			<p class="description_txt_1"> We 3D printed wheels and treads using flex, and made the rest of the body using clear acrylic. It took multiple adjustments to find the perfect fit for the wheels and tread, by making sure there was not too much or too little slack. We made the top hole adjustable so we could slide the wheels on and off, and created washers to support the wheels onto the body. Using the same motors and BLE feather, we assembled the rest of the body similar to the wooden prototype, and we made cases for each of the components with easy access to switch them in and out. In future iterations, I would have sanded the gears more to create smoother motion. </p>
+			<p class="description_txt_1"> After finding a stable way to mount the planetary gears, I designed a frame for the gears to sit in, and created a railing on the side for the linkages to smoothly glide in and out of. I added a handle with knob on the end to make it easier and more intuitive to grab, and added supports to stabilize the frame. </p>
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/f7BXJlwxI68?" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 		</div>
