--- a/exhale.html
+++ b/exhale.html
@@ -15,8 +15,8 @@
 			<p class="side"> Design </p>
 			<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
 			<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
-			<a href = "wood.html" class="sidebar_item"> Wood Work </a>	
 			<a href = "az.html" class="sidebar_item"> AZ Lyrics </a>
+			<a href = "wood.html" class="sidebar_item"> Wood Work </a>
 			<a href = "misc.html" class="sidebar_item"> Misc </a>
 			<p class="side"> Creative Direction </p>	
 			<a href = "i26.html" class="sidebar_item"> i26 </a>
@@ -30,14 +30,15 @@
 	<div class="container">
 		<p class="dTitle">Exhale</p>
 		<div class="description">
-			<p class="description_txt"> <span class="boldwrd"> Timeline: </span> 2 weeks - Fall 2019<br><span class= "boldwrd"> Design challenge: </span> Create a distributable, nondiscrete piece of art. <br> 
+			<p class="description_txt"> As a project for Visual Thinking (Fall 2019), I created this simple site as a response to our prompt of creating a distributable, nondiscrete piece of art. 
+				<br> After thinking about the types of distributable products I could create, I noticed that mental health on college campuses is often neglected, so I wanted to design a website to target one facet of this complex issue. I decided to build a website with a breathing activity, which I saw as a potential solution to help reduce some of the stress students experience, and wanted to ensure that this resource was accessible and intuitive to use.  
 		</div>
 
 		<p class="description_txt"> <span class= "boldwrd"> Sketch: </span>
 		<div class="pics">
 			<img class="portpics" src="assets/img/circle.png" width="225px">
 	
-			<p class="description_txt_1"> After thinking about the types of distributable products I could create, I noticed that mental health on college campuses is often neglected, so I wanted to design a website to target one facet of this complex issue. I decided to design a website with a breathing activity, which I saw as a potential solution to help reduce some of the stress students experience, and wanted to ensure that this resource was accessible and intuitive to use. My initial thought was to create a circle expanded and contracted to the rhythm of a breath that looked like the picture above. </p>
+			<p class="description_txt_1"> My initial thought was to create a circle expanded and contracted to the rhythm of a breath that looked like the picture above. </p>
 		</div>
 		
 		<p class="description_txt"> <span class= "boldwrd"> Website: </span>
