--- a/light.html
+++ b/light.html
@@ -15,8 +15,8 @@
 			<p class="side"> Design </p>
 			<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
 			<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
-			<a href = "wood.html" class="sidebar_item"> Wood Work </a>	
 			<a href = "az.html" class="sidebar_item"> AZ Lyrics </a>
+			<a href = "wood.html" class="sidebar_item"> Wood Work </a>
 			<a href = "misc.html" class="sidebar_item"> Misc </a>
 			<p class="side"> Creative Direction </p>	
 			<a href = "i26.html" class="sidebar_item"> i26 </a>
@@ -30,8 +30,8 @@
 	<div class="container">
 		<p class="dTitle">Lightning McQueen</p>
 		<div class="description">
-			<p class="description_txt"> <span class="boldwrd"> Timeline: </span> 4 weeks - Summer 2019 Design Innovation 22<br> <span class = "boldwrd"> Team: </span> 2 people</p>
-			<p class="description_txt"> <span class= "boldwrd"> Design challenge: </span> Create a bluetooth motorized chassis. <br> 
+			<p class="description_txt"> As a project for Prototyping and Fabrication, my team partner and I were prompted to build a bluetooth motorized chassis. After discussing different models and designs for the robot, we decided to go with a simple, triangular shaped chassis that had two motors on each side that we could easily program to move forward/backward/left/right. The triangular shape allowed us to maintain lightness and durability because it could flip over and we would still have control. This project helped me develop skills in laser cutting, Aruduino, Fusion 360/3D printing, and the iterative design process. <br> <br><span class="boldwrd"> Timeline: </span> 4 weeks - Summer 2019 <br> <span class = "boldwrd"> Team: </span> 2 people <br> <span class= "boldwrd"> Design challenge: </span> Create a bluetooth motorized chassis. <br>  </p>
+			
 		</div>
 
 		<p class="description_txt"> <span class= "boldwrd"> Cardboard prototype: </span>
