--- a/misc.html
+++ b/misc.html
@@ -45,7 +45,7 @@
 			<img class="portpics" src="assets/img/p5.jpg" width="300px">
 			<img class="portpics" src="assets/img/p6.jpg" width="300px">
 			<img class="portpics" src="assets/img/p12.jpg" height ="300px">
-			<img class="portpics" src="assets/img/p7.jpg" width="300px">
+			<img class="portpics" src="assets/img/p7.JPG" width="300px">
 	
 		</div>		
 
