--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<a href= "index.html" class="name"> Anissa Rashid</a>
 		<div class="menucontents">	
 			<p class="side"> Design </p>
+			<a href = "his.html" class="sidebar_item"> His Pills </a>	
 			<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
 			<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
 			<a href = "az.html" class="sidebar_item"> AZ Lyrics </a>
@@ -32,6 +33,10 @@
 			<div class="thumbs_wrapper">
 				<div class="title_thumb">design</div>
 				<div class="title_pics">
+					<a href="light.html" class="txtover">
+						<img id = "light" src="assets/img/mock4.JPG" height="150px">
+						<div id = "title"> his pills </div>
+					</a>
 					<a href="light.html" class="txtover">
 						<img id = "light" src="assets/img/light.JPG" height="150px">
 						<div id = "title"> lightning mqcueen </div>
