--- a/i26.html
+++ b/i26.html
@@ -13,7 +13,8 @@
 		<a href= "index.html" class="name"> Anissa Rashid</a>
 		<div class="menucontents">	
 			<p class="side"> Design </p>
-		<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
+			<a href = "his.html" class="sidebar_item"> His Pills </a>	
+			<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
 			<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
 			<a href = "az.html" class="sidebar_item"> AZ Lyrics </a>
 			<a href = "wood.html" class="sidebar_item"> Wood Work </a>
