--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<div class="title_thumb">design</div>
 				<div class="title_pics">
 					<a href="light.html" class="txtover">
-						<img id = "light" src="assets/img/mock4.JPG" height="150px">
+						<img id = "light" src="assets/img/mock4.jpg" height="150px">
 						<div id = "title"> his pills </div>
 					</a>
 					<a href="light.html" class="txtover">
