--- a/contact.html
+++ b/contact.html
@@ -14,9 +14,9 @@
 		<div class="menucontents">	
 			<p class="side"> Design </p>
 			<a href = "his.html" class="sidebar_item"> His Pills </a>	
-			<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
 			<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
 			<a href = "az.html" class="sidebar_item"> AZ Lyrics </a>
+			<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
 			<a href = "wood.html" class="sidebar_item"> Wood Work </a>
 			<a href = "misc.html" class="sidebar_item"> Misc </a>
 			<p class="side"> Creative Direction </p>	
@@ -25,6 +25,7 @@
 			<a href = "i24.html" class="sidebar_item"> Earthworks </a>
 			<a href = "i23.html" class="sidebar_item"> Matriarchs </a>
 			<a href = "contact.html" class="contact"> About </a>
+			<a href = "assets/img/resume2.pdf" class="contact"> Resume </a>
 		</div>
 	</div>
 
@@ -35,12 +36,12 @@
 	<div class="pics">
 		<img class="contactpic" src="assets/img/about.png" >
 
-		<p class="contacttxt"> I am an Economics and Data Science student at UC Berkeley, and an asipiring UI/UX designer with experience in creative direction, physical prototyping, visual design, and branding.
-		<br><br> I believe in building inclusive, representative, and intentional design to help solve complex and intersectional problems. I'm passionate about visually sharing stories and representing the communities I am apart of throughout my creative work. I am currently looking for new opportunities to grow and develop as a designer. 
+		<p class="contacttxt"> Hello, I'm Anissa! I'm currently studying Economics, Data Science, and Design at UC Berkeley. I have a variety of experience in visual design, web design, branding, creative direction, and physical prototyping. 
+		<br><br> I'm a creative and driven person, and I'm passionate about designing beautiful, inclusive, and functional experiences. I believe in visually sharing stories and representing my communities throughout my creative work. I am currently looking for new opportunities to grow and develop as a designer. 
 		
 		<br><br><a href = "assets/img/resume2.pdf"> <span style="font-weight: bold; font-size: 20px;"> Resume </span></a>
 
-		<br><br> <span style="font-weight: bold; font-size: 20px"> Contact </span>
+		<br><br> <span style="font-weight: bold; font-size: 20px"> Let's talk! </span>
 		<br> Email: anissarashid@berkeley.edu 
 
 		</p>	
