--- a/his.html
+++ b/his.html
@@ -4,8 +4,14 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://use.typekit.net/osp0fvo.css">
 	<script src="scripts/script.js"></script>	
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+	<script>
+  	AOS.init();
+	</script>
+
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,600,700,800,900&display=swap" rel="stylesheet">
+	
 </head>
 <body>
 	<div class="pagecont">
@@ -14,9 +20,9 @@
 		<div class="menucontents">	
 			<p class="side"> Design </p>
 			<a href = "his.html" class="sidebar_item"> His Pills </a>	
-			<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
 			<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
 			<a href = "az.html" class="sidebar_item"> AZ Lyrics </a>
+			<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
 			<a href = "wood.html" class="sidebar_item"> Wood Work </a>
 			<a href = "misc.html" class="sidebar_item"> Misc </a>
 			<p class="side"> Creative Direction </p>	
@@ -25,6 +31,7 @@
 			<a href = "i24.html" class="sidebar_item"> Earthworks </a>
 			<a href = "i23.html" class="sidebar_item"> Matriarchs </a>
 			<a href = "contact.html" class="contact"> About </a>
+			<a href = "assets/img/resume2.pdf" class="contact"> Resume </a>
 		</div>
 	</div>
 
@@ -59,7 +66,7 @@
 
 		<p class="description_txt"> <span class= "boldwrd"> Posters </span>
 		<div class="pics">
-			<img class="portpics" src="assets/img/poster1.png" height="250px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
+			<img class="portpics" src="assets/img/poster1.png" height="250px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);"> 
 			<img class="portpics" src="assets/img/poster2.png" height="250px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
 			<img class="portpics" src="assets/img/poster3.png" height="250px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
 			<img class="portpics" src="assets/img/poster4.png" height="250px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
