--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<script src="scripts/script.js"></script>	
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,600,700,800,900&display=swap" rel="stylesheet">
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 </head>
 <body>
 	<div class="pagecont">
@@ -14,9 +16,9 @@
 		<div class="menucontents">	
 			<p class="side"> Design </p>
 			<a href = "his.html" class="sidebar_item"> His Pills </a>	
-			<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
 			<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
 			<a href = "az.html" class="sidebar_item"> AZ Lyrics </a>
+			<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
 			<a href = "wood.html" class="sidebar_item"> Wood Work </a>
 			<a href = "misc.html" class="sidebar_item"> Misc </a>
 			<p class="side"> Creative Direction </p>	
@@ -25,11 +27,14 @@
 			<a href = "i24.html" class="sidebar_item"> Earthworks </a>
 			<a href = "i23.html" class="sidebar_item"> Matriarchs </a>
 			<a href = "contact.html" class="contact"> About </a>
+			<a href = "assets/img/resume2.pdf" class="contact"> Resume </a>
 		</div>
 	</div>
 
 	<div class="container">
+
 		<div id = "thumbnails"> 
+			<p style="font-size: 30px;"> Anissa is a <b> visual designer  </b> and <b>creative director </b>based in the Bay Area. </p>
 			<div class="thumbs_wrapper">
 				<div class="title_thumb">design</div>
 				<div class="title_pics">
