--- a/misc.html
+++ b/misc.html
@@ -14,9 +14,9 @@
 		<div class="menucontents">	
 			<p class="side"> Design </p>
 			<a href = "his.html" class="sidebar_item"> His Pills </a>	
-			<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
 			<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
 			<a href = "az.html" class="sidebar_item"> AZ Lyrics </a>
+			<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
 			<a href = "wood.html" class="sidebar_item"> Wood Work </a>
 			<a href = "misc.html" class="sidebar_item"> Misc </a>
 			<p class="side"> Creative Direction </p>	
@@ -25,13 +25,14 @@
 			<a href = "i24.html" class="sidebar_item"> Earthworks </a>
 			<a href = "i23.html" class="sidebar_item"> Matriarchs </a>
 			<a href = "contact.html" class="contact"> About </a>
+			<a href = "assets/img/resume2.pdf" class="contact"> Resume </a>
 		</div>
 	</div>
 
 	<div class="container">
 		<p class="dTitle"> miscellaneous creative work </p>
 		<div class="description">
-			<p class="description_txt"> Below are some samples of my photography, graphic design, videography, and collage.
+			<p class="description_txt"> Below I've included my work in photography, graphic design, videography, and collage.
 			</p>
 			
 		</div>
