--- a/misc.html
+++ b/misc.html
@@ -32,7 +32,7 @@
 	<div class="container">
 		<p class="dTitle"> miscellaneous creative work </p>
 		<div class="description">
-			<p class="description_txt"> Below I've included my work in photography, graphic design, videography, and collage.
+			<p class="description_txt"> Below I've included my work in photography, graphic design, video, and collage.
 			</p>
 			
 		</div>
@@ -53,18 +53,20 @@
 
 
 
-		<p class="description_txt"> <span class= "boldwrd"> Graphic design </span>
+		<p class="description_txt"> <span class= "boldwrd"> Graphics </span>
 		<div class="pics">
+			<img class="portpics" src="assets/img/info5-02.png" width="300px">
+			<img class="portpics" src="assets/img/info-03.png" width="300px">
+			<img class="portpics" src="assets/img/earth-07.png" width="300px">
+			<img class="portpics" src="assets/img/tally2-01.png" width="300px">
 			<img class="portpics" src="assets/img/me-02.png" width="300px">
 			<img class="portpics" src="assets/img/reese.png" width="300px">
-			<img class="portpics" src="assets/img/bamfest1.png" width="250px">
-			<img class="portpics" src="assets/img/bamfest3.jpg" width="250px">
-			<img class="portpics" src="assets/img/sticker.png" width="250px">
-			<img class="portpics" src="assets/img/sticker2.png" width="250px">
+			<img class="portpics" src="assets/img/bamfest1.png" width="300px">
+			<img class="portpics" src="assets/img/bamfest3.jpg" width="300px">
 			
 		</div>
 
-		<p class="description_txt"> <span class= "boldwrd"> Videography </span>
+		<p class="description_txt"> <span class= "boldwrd"> Video </span>
 		<div class="pics">
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/1FdodUdB860" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<p></p>
