--- a/exhale.html
+++ b/exhale.html
@@ -14,9 +14,9 @@
 		<div class="menucontents">	
 			<p class="side"> Design </p>
 			<a href = "his.html" class="sidebar_item"> His Pills </a>	
+			<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
 			<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
 			<a href = "az.html" class="sidebar_item"> AZ Lyrics </a>
-			<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
 			<a href = "wood.html" class="sidebar_item"> Wood Work </a>
 			<a href = "misc.html" class="sidebar_item"> Misc </a>
 			<p class="side"> Creative Direction </p>	
@@ -25,7 +25,6 @@
 			<a href = "i24.html" class="sidebar_item"> Earthworks </a>
 			<a href = "i23.html" class="sidebar_item"> Matriarchs </a>
 			<a href = "contact.html" class="contact"> About </a>
-			<a href = "assets/img/resume2.pdf" class="contact"> Resume </a>
 		</div>
 	</div>
 
@@ -56,8 +55,8 @@
 		
 		<p class="description_txt"> <span class= "boldwrd"> Marketing Materials: </span>
 		<div class="pics">
-			<img class="portpics" src="assets/img/sticker.png" width="290px">
-			<img class="portpics" src="assets/img/sticker2.png" width="300px">
+			<img class="portpics" src="assets/img/stickernew.png" width="300px">
+			<img class="portpics" src="assets/img/stickernew2.png" width="300px">
 			<p class="description_txt_1"> These are two sticker or flyer designs that could be printed and distributed around UC Berkeley in order to spread awareness of this digital tool. </p>
 
 		</div>
