--- a/his.html
+++ b/his.html
@@ -11,6 +11,8 @@
 
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,600,700,800,900&display=swap" rel="stylesheet">
+	<link rel=" icon" href="assets/img/favicon.png"/>
+
 	
 </head>
 <body>
@@ -36,31 +38,51 @@
 	</div>
 
 	<div class="container">
-		<p class="dTitle"> His Pills - in progress </p>
+		<p class="dTitle"> His Pills </p>
 		<div class="description">
-			<p class="description_txt"> Born out of the frustration that the majority of popular forms of conception are for women rather than men, I created this brand to broaden our perspective towards birth control. Female birth control can be a difficult for women to use, as it directly affects their hormones and can have extreme side effects. I wanted this brand to challenge how we view birth control, and to balance the responsiblity of contraception more evenly by introducing what an alternative form of contraception could look like. His Pills is a birth control company that sells "the pill" to men or non-binary people. <br> *I use the term "male birth control," but this pill applies to anybody who wants a safe form of birth control that will prevent pregnancy for their partner. <br> <br><span class="boldwrd"> Timeline: </span> 4 months - Spring 2020 <br> <span class = "boldwrd"> Design challenge: </span> Build a brand idenity for your own company.
+			<p class="description_txt"> Born out of the frustration that the majority of contraceptive methods are made for women rather than men, I created this brand to broaden our perspective towards birth control and to balance the responsibility equally. Female birth control can be a difficult for women to use, as it directly affects their hormones and can have extreme side effects. I wanted this brand to challenge the association with women and birth control responsibility by introducing what an alternative form for men could look like. His Pills is a birth control company that sells "the pill" to men or non-binary people. <br> *I use the term "male birth control," but this pill applies to anybody who wants a safe form of birth control that will prevent pregnancy for their partner. <br> <br><span class="boldwrd"> Timeline: </span> 4 months - Spring 2020 <br> <span class = "boldwrd"> Design challenge: </span> Build a brand idenity for your own company.
 			</p>
 			
 		</div>
 
 		<p class="description_txt"> <span class= "boldwrd"> Sketching and Ideation </span>
-		<div class="pics">
+		<div class="pics" style="width: 800px;">
 			<img class="portpics" src="assets/img/his1.png" height ="200px">
 			<img class="portpics" src="assets/img/his2.png" height="200px">
 			<img class="portpics" src="assets/img/his3.png" height="200px">
 			<img class="portpics" src="assets/img/his4.png" height="200px">
 			<img class="portpics" src="assets/img/his5.png" height="200px">
-			<img class="portpics" src="assets/img/his6.png" height="200px">
-			<img class="portpics" src="assets/img/his7.png" height="200px">
-			<img class="portpics" src="assets/img/logosfinal.png" height="300px">
-			<img class="portpics" src="assets/img/logosfinal2.png" height="300px">
+		
+			<img class="portpics" src="assets/img/logosfinal.png" height ="200px">
+			<img class="portpics" src="assets/img/logosfinal2.png" height="200px">
 			<p class="description_txt_1"> I wanted His Pills to have bold and playful branding, without presenting a hyper-masculine tone through the font or color palette. I explored multiple different color palettes and logo designs to sucessfully convey this brand as one that pushes healthcare boundaries and appeals to men without conforming to gender stereotypes. </p>
 		</div>
 		
 		<p class="description_txt"> <span class= "boldwrd"> Logo Design and Color Palette </span>
 		<div class="pics">
 			<img class="portpics" src="assets/img/logosfinal3.png" height="200px">
-			<p class="description_txt_1"> I chose to just used a lower case 'H' in the Cabazon font. Creating brand assests helped me direct this logo. I was torn between using a clean, bold, sans serif font, but after designing posters and business cards, I leaned more towards a script font. I liked Cabazon because it was both strong and playful, and just using an H rather than "His" helped with readability and simplicity. I used a deep navy, red-orange, and a nude peach color palette because both the navy and red were bold colors, and the nude helped to balance these two out. </p> 
+			<p class="description_txt_1"> I was torn between using a clean, bold, sans serif font, but I chose to use this script font, Cabazon, because it achieved the strength and playful tone that I envisioned for this brand. Just using a lower case "H" rather than "His" helped with readability and simplicity. I used a deep navy, red-orange, and a nude peach color palette because both the navy and red were bold colors that the nude helped to balance out. I also enjoyed how this palette was strong and saturated without being overtly masculine.  </p> 
+		</div>
+
+		<p class="description_txt"> <span class= "boldwrd"> Packaging </span>
+		<div class="pics">
+			<img class="portpics" src="assets/img/mock4.jpg" height="200px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
+			<img class="portpics" src="assets/img/mock6.png" height="200px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
+			<p class="description_txt_1"> Packaging for the pill boxes, each containing 32 tablets for the month.</p> 
+		</div>
+
+		<p class="description_txt"> <span class= "boldwrd"> Website </span>
+		<div class="pics">
+			<video width="500px"  preload controls style="margin-bottom: 20px;">
+				<source src="assets/img/website.mp4" type="video/mp4">
+			</video>
+			<p class="description_txt_1"> Wireframe for the company's website, includes information and help about the pill. </p> 
+		</div>
+
+		<p class="description_txt"> <span class= "boldwrd"> Official Branding Guidelines </span>
+		<div class="pics">
+			<img class="portpics" src="assets/img/hisfinal-04.png" width="400px" >
+			
 		</div>
 
 
@@ -88,13 +110,19 @@
 
 		<p class="description_txt"> <span class= "boldwrd"> Products </span>
 		<div class="pics">
+			<img class="portpics" src="assets/img/posterfinalmock1.png" height="200px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
+			<img class="portpics" src="assets/img/posterfinalmock2.png" height="200px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
+			<img class="portpics" src="assets/img/posterfinalmock3.png" height="200px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
+			<img class="portpics" src="assets/img/mock5.jpg" height="200px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
+			<img class="portpics" src="assets/img/posterfinalmock4.png" height="200px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
 			<img class="portpics" src="assets/img/mock1.jpg" height="200px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
 			<img class="portpics" src="assets/img/mock2.jpg" height="200px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
-			<img class="portpics" src="assets/img/mock3.jpg" height="200px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
-			<img class="portpics" src="assets/img/mock4.jpg" height="200px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
-			<img class="portpics" src="assets/img/mock5.jpg" height="200px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
-			<p class="description_txt_1"> I'm still working on this project. Currently, I'm finalizing the official branding guidelines and creating more brand assets.</p> 
 		</div>
+
+		<p class="description_txt"> <span class= "boldwrd"> Reflection </span>
+			<p class="description_txt_1">
+				Overall, I’m happy with how this project turned out. I learned so many new skills and techniques with Illustrator throughout this process. If I had more time, I would create more supplementary assets, like an app mockup, to further establish this brand's purpose. I would also explore the art direction more, by leading my own photoshoots and creating more illustrations. I’m really glad I completed this project, and I hope to continue doing brand identity design.
+			</p>
 		
 
 	
