--- a/light.html
+++ b/light.html
@@ -6,6 +6,7 @@
 	<script src="scripts/script.js"></script>	
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,600,700,800,900&display=swap" rel="stylesheet">
+	<link rel=" icon" href="assets/img/favicon.png"/>
 </head>
 <body>
 	<div class="pagecont">
