--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
 				<div class="title_thumb">creative direction</div>
 				<div class="title_pics">
 					<a href="i26.html" class="txtover">
-						<img id = "i26" src="assets/img/i26.png" height="250px">
+						<img id = "i26" src="assets/img/i26-1.jpg" height="250px">
 						<div id = "title"> i26 </div>
 					</a>
 					<a href="i25.html" class="txtover">
-						<img id = "i25" src="assets/img/i25.png" height="250px">
+						<img id = "i25" src="assets/img/i25-3.png" height="250px" width="160px">
 						<div id = "title"> i25 </div>
 					</a>
 					<a href="i24.html" class="txtover">
-						<img id = "i24" src="assets/img/i24.png" height="250px">
+						<img id = "i24" src="assets/img/i24-7.png" height="250px">
 						<div id = "title"> Earthworks </div>
 					</a>
 					<a href="i23.html" class="txtover">
-						<img id = "i23" src="assets/img/i23.png" height="250px">
+						<img id = "i23" src="assets/img/i23-2.png" height="250px">
 						<div id = "title"> Matriarchs </div>
 					</a>
 						
