--- a/light.html
+++ b/light.html
@@ -18,7 +18,6 @@
 			<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
 			<a href = "az.html" class="sidebar_item"> AZ Lyrics </a>
 			<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
-			<a href = "wood.html" class="sidebar_item"> Wood Work </a>
 			<a href = "misc.html" class="sidebar_item"> Misc </a>
 			<p class="side"> Creative Direction </p>	
 			<a href = "i26.html" class="sidebar_item"> i26 </a>
@@ -33,7 +32,7 @@
 	<div class="container">
 		<p class="dTitle">Lightning McQueen</p>
 		<div class="description">
-			<p class="description_txt"> As a project for Prototyping and Fabrication, my team partner and I were prompted to build a bluetooth motorized chassis. After discussing different models and designs for the robot, we decided to go with a simple, triangular shaped chassis that had two motors on each side that we could easily program to move forward/backward/left/right. The triangular shape allowed us to maintain lightness and durability because it could flip over and we would still have control. This project helped me develop skills in laser cutting, Aruduino, Fusion 360/3D printing, and the iterative design process. <br> <br><span class="boldwrd"> Timeline: </span> 4 weeks - Summer 2019 <br> <span class = "boldwrd"> Team: </span> 2 people <br> <span class= "boldwrd"> Design challenge: </span> Create a bluetooth motorized chassis. <br>  </p>
+			<p class="description_txt"> As a project for Prototyping and Fabrication, my team partner and I were prompted to build a bluetooth motorized chassis. This course taught skills in designing, prototyping, and fabricating for physical objects, including 2D and 3D modeling and fabrication, basic electronics, lasercutting, and 3D printing. <br> <br><span class="boldwrd"> Timeline: </span> 4 weeks - Summer 2019 <br> <span class = "boldwrd"> Team: </span> 2 people <br> <span class= "boldwrd"> Design challenge: </span> Create a bluetooth motorized chassis. <br>  </p>
 			
 		</div>
 
