--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 			<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
 			<a href = "az.html" class="sidebar_item"> AZ Lyrics </a>
 			<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
-			<a href = "wood.html" class="sidebar_item"> Wood Work </a>
 			<a href = "misc.html" class="sidebar_item"> Misc </a>
 			<p class="side"> Creative Direction </p>	
 			<a href = "i26.html" class="sidebar_item"> i26 </a>
@@ -56,12 +55,11 @@
 						<img id = "ex" src="assets/img/exhale.png" height="250px" width="400px">
 						<div id = "title"> <b> exhale </b> <br>UI, web design</div>
 					</a>
-					<a href="wood.html" class="txtover">
-						<img id = "wood" src="assets/img/wood1.JPG" height="250px">
-						<div id = "title"> <b> wood work </b> <br>physical design, prototyping </div>
-					</a>
+					
 					<a href="light.html" class="txtover">
-						<img id = "light" src="assets/img/light.JPG" height="250px">
+						<video id = "light"  height="250" preload controls autoplay muted="true">
+							<source src="assets/img/final.mp4">
+						</video>
 						<div id = "title"> <b> lightning mqcueen </b> <br>physical design, prototyping </div>
 					</a>
 					
