--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					</a>
 					
 					<a href="light.html" class="txtover">
-						<video id = "light"  height="250" preload controls autoplay muted="true">
+						<video id = "light"  height="250" preload controls autoplay loop muted="true">
 							<source src="assets/img/final.mp4">
 						</video>
 						<div id = "title"> <b> lightning mqcueen </b> <br>physical design, prototyping </div>
